--- a/src/style.css
+++ b/src/style.css
@@ -6,13 +6,6 @@ h1 {
   text-shadow: 5px 5px 5px rgb(0 0 0 / 5%);
 }
 
-h2 {
-  font-size: 40px;
-  font-weight: 300;
-  margin-top: 15px;
-  margin-bottom: 15px;
-}
-
 h4 {
   font-size: 15px;
   font-weight: 300;
@@ -29,7 +22,7 @@ ul {
   padding-left: 0;
 }
 
-.app-full {
+.app {
   margin: 0;
   padding: 0;
   max-width: 100%;
@@ -71,4 +64,25 @@ ul {
 small {
   display: block;
   text-align: center;
+}
+
+.degrees {
+  font-size: 40px;
+  font-weight: 300;
+  margin-top: 15px;
+  margin-bottom: 15px;
+}
+
+.units {
+  position: relative;
+  font-size: 15px;
+  font-weight: 300;
+  top: -20px;
+  margin-top: 8px;
+}
+
+.devide,
+.alrenative-unit {
+  text-decoration: none;
+  color: rgb(231, 231, 231);
 }
