--- a/src/style.css
+++ b/src/style.css
@@ -2,6 +2,7 @@ h1 {
   font-size: 60px;
   font-weight: 300;
   text-transform: uppercase;
+  margin-top: 30px;
   margin-bottom: 15px;
   text-shadow: 5px 5px 5px rgb(0 0 0 / 5%);
 }
@@ -12,10 +13,15 @@ h4 {
   margin-top: 8px;
 }
 
-li {
+li,
+form {
   font-size: 15px;
   font-weight: 300;
   list-style: none;
+}
+
+form {
+  color: rgb(67, 101, 225);
 }
 
 ul {
@@ -81,8 +87,12 @@ small {
   margin-top: 8px;
 }
 
-.devide,
+.divide,
 .alrenative-unit {
   text-decoration: none;
   color: rgb(231, 231, 231);
+}
+
+.weather-description {
+  text-transform: capitalize;
 }
