--- a/src/style.css
+++ b/src/style.css
@@ -1,6 +1,7 @@
 h1 {
   font-size: 60px;
   font-weight: 300;
+  letter-spacing: 0.1em;
   text-transform: uppercase;
   margin-top: 30px;
   margin-bottom: 15px;
@@ -10,17 +11,20 @@ h1 {
 h4 {
   font-size: 15px;
   font-weight: 300;
+  letter-spacing: 0.03em;
   margin-top: 8px;
 }
 
 li,
-form {
+button,
+input {
   font-size: 15px;
   font-weight: 300;
+  letter-spacing: 0.03em;
   list-style: none;
 }
 
-form {
+input {
   color: rgb(67, 101, 225);
 }
 
