--- a/src/style.css
+++ b/src/style.css
@@ -3,7 +3,8 @@ h1 {
   font-weight: 400;
   letter-spacing: 0.1em;
   text-transform: uppercase;
-  margin-top: 30px;
+  margin-top: 50px;
+  margin-bottom: 0;
   text-shadow: 5px 5px 5px rgb(0 0 0 / 4%);
 }
 
@@ -26,13 +27,19 @@ input {
 
 ul {
   padding-left: 0;
-  margin-top: 16px;
+  margin-top: 15px;
   margin-bottom: 0;
 }
 
 small {
   display: block;
   text-align: center;
+}
+
+img {
+  width: 150px;
+  height: 150px;
+  margin-top: 50px;
 }
 
 .app {
@@ -68,12 +75,11 @@ small {
 .right {
   display: block;
   text-align: center;
-  margin-top: 40px;
 }
 
 .middle {
-  margin-top: 40px;
-  text-align: right;
+  margin-top: 55px;
+  text-align: center;
 }
 
 .degrees {
@@ -92,11 +98,13 @@ small {
 }
 
 .divide,
-.alrenative-unit {
+.units,
+.alrenative-units {
   text-decoration: none;
   color: rgb(231, 231, 231);
 }
 
 .weather-description {
   text-transform: capitalize;
+  margin-top: 20px;
 }
