--- a/src/style.css
+++ b/src/style.css
@@ -1,9 +1,9 @@
 h1 {
   font-size: 60px;
-  font-weight: 400;
+  font-weight: 500;
   letter-spacing: 0.1em;
   text-transform: uppercase;
-  margin-top: 50px;
+  margin-top: 30px;
   margin-bottom: 0;
   text-shadow: 5px 5px 5px rgb(0 0 0 / 4%);
 }
@@ -12,12 +12,11 @@ h4 {
   font-size: 14px;
   font-weight: 300;
   letter-spacing: 0.03em;
-  margin-top: 15px;
+  margin-top: 20px;
   margin-bottom: 15px;
 }
 
 li,
-button,
 input {
   font-size: 14px;
   font-weight: 300;
@@ -39,7 +38,8 @@ small {
 img {
   width: 150px;
   height: 150px;
-  margin-top: 50px;
+  margin-top: -15px;
+  position: relative;
 }
 
 .app {
@@ -50,37 +50,73 @@ img {
 
 .app-wrapper {
   font-family: "Poppins", sans-serif;
-  max-width: 1000px;
+  max-width: 900px;
+  border: 100px;
   display: block;
   margin: 40px auto;
+  position: relative;
+  z-index: 9;
+  border-color: rgb(135, 135, 135);
+  border-radius: 25px 20px 20px 25px;
+  padding: 20px 20px 0 20px;
+  margin: 30px auto;
+  box-shadow: 5px 5px 30px -5px rgb(0 0 0 / 35%);
+  background-color: #fff;
 }
 
 .app-wrapper-top {
   border-radius: 20px;
-  padding: 30px;
+  padding: 40px 40px 30px 40px;
   color: #fff;
   background: linear-gradient(
     286.8deg,
-    rgb(30, 144, 231) 17.1%,
+    rgb(30, 124, 231) 17.1%,
     rgb(67, 101, 225) 77.8%
   );
 }
 
 .app-wrapper-middle {
-  margin-top: 20px;
+  margin-top: 15px;
   text-align: center;
   border-radius: 20px;
-  padding: 30px;
+  padding: 25px;
   color: rgb(58, 58, 58);
+}
+
+.col-1 {
+  width: 7%;
+}
+
+.col-5 {
+  width: 52%;
+}
+
+.current-location-button:hover {
+  cursor: pointer;
+}
+
+.find-city {
+  padding-left: 16px;
+  padding-right: 8px;
+}
+
+.find-current-location,
+.find-city-submit {
+  padding: 0;
+}
+
+.city-submit-button:hover {
+  cursor: pointer;
 }
 
 .right {
   display: block;
   text-align: center;
+  position: relative;
 }
 
 .middle {
-  margin-top: 55px;
+  margin-top: 37px;
   text-align: center;
 }
 
@@ -119,7 +155,13 @@ img {
   cursor: default;
 }
 
-.weather-description,
+.weather-description {
+  text-transform: capitalize;
+  font-size: 20px;
+  font-weight: 400;
+  letter-spacing: 0.03em;
+}
+
 .forecast-description {
   text-transform: capitalize;
   margin-top: 20px;
@@ -138,13 +180,23 @@ img {
   letter-spacing: 0.03em;
 }
 
-.forecast-temp-divider {
-  font-size: 18px;
+.forecast-min-temp {
+  color: grey;
   font-weight: 200;
+}
+
+.forecast-temp-divider {
+  font-size: 16px;
+  font-weight: 100;
 }
 
 .forecast-icon {
   width: 80px;
   height: 80px;
   margin-top: 10px;
+}
+
+a {
+  color: grey;
+  text-decoration: none;
 }
