--- a/src/style.css
+++ b/src/style.css
@@ -112,11 +112,11 @@ img {
 }
 
 .date-today {
-  margin-top: 10px;
+  margin-top: 0;
   margin-bottom: 0;
   text-align: right;
-  font-size: 14px;
-  font-weight: 500;
+  font-size: 12px;
+  font-weight: 400;
   letter-spacing: 0.03em;
   text-transform: uppercase;
 }
