--- a/src/style.css
+++ b/src/style.css
@@ -38,6 +38,8 @@ img {
 }
 
 .app-wrapper {
+  padding: 20px 20px 0 20px;
+  margin: 40px auto;
   font-family: "Poppins", sans-serif;
   max-width: 900px;
   border: 100px;
@@ -67,6 +69,10 @@ img {
   border-radius: 20px;
   padding: 25px;
   color: rgb(58, 58, 58);
+}
+
+.app-wrapper-footer {
+  margin-bottom: 12px;
 }
 
 .search-bar {
@@ -103,7 +109,7 @@ img {
   margin-top: 0;
   margin-bottom: 0;
   text-align: right;
-  font-size: 12px;
+  font-size: 14px;
   font-weight: 400;
   letter-spacing: 0.03em;
   text-transform: uppercase;
@@ -190,7 +196,7 @@ a {
   text-decoration: none;
 }
 
-@media (min-width: 768px) {
+@media (max-width: 767px) {
   .app {
     margin: 0;
     padding-left: 20px;
@@ -199,26 +205,49 @@ a {
   }
 
   .app-wrapper {
-    padding: 20px 20px 0 20px;
-    margin: 40px auto;
+    margin: 12px 0 20px 0;
+  }
+
+  .city-submit-button {
+    width: 30px;
+    height: 30px;
+    padding-top: 2px;
+    padding-left: 8px;
+  }
+
+  .current-location-button {
+    width: 29px;
+    height: 29px;
+    padding-top: 4px;
+  }
+
+  .date-today {
+    margin-top: 35px;
+    text-align: center;
+  }
+
+  h1 {
+    margin-top: 20px;
+    font-size: 50px;
+    text-align: center;
   }
 
   .left {
-    width: 55%;
+    width: 100%;
     padding-right: 0px;
   }
 
   .middle {
     margin-top: 37px;
-    width: 20%;
-    padding-left: 100px;
+    width: 50%;
+    padding-left: 40px;
     text-align: left;
   }
   .right {
     display: block;
     text-align: center;
     position: relative;
-    width: 25%;
+    width: 50%;
     right: -15px;
   }
 
@@ -228,32 +257,14 @@ a {
     margin-bottom: 0;
     text-align: left;
   }
-
-  .date-today {
-    margin-top: 20px;
-    margin-bottom: 0;
-    text-align: center;
-    font-size: 12px;
-    font-weight: 400;
-    letter-spacing: 0.03em;
-    text-transform: uppercase;
-  }
 }
 
-@media (min-width: 320px) {
-  .app-wrapper {
-    padding: 20px 20px 0 20px;
-    margin: 12px 0 40px 0;
-  }
-
-  .search-bar {
-    width: 95%;
-  }
-
+@media (max-width: 576px) {
   .city-submit-button {
     width: 26px;
     height: 26px;
     padding-top: 5px;
+    padding-left: 5px;
   }
 
   .current-location-button {
@@ -262,55 +273,35 @@ a {
     padding-top: 4px;
   }
 
-  .date-today {
-    margin-top: 25px;
-    margin-bottom: 0;
-    padding-left: 10px;
-    padding-right: 10px;
-    text-align: center;
-    font-size: 12px;
-    font-weight: 400;
-    letter-spacing: 0.03em;
-    text-transform: uppercase;
-  }
-
   h1 {
-    margin-top: 20px;
-    font-size: 42px;
-    text-align: center;
+    font-size: 40px;
   }
 
   .left {
-    width: 80%;
     padding-left: 10px;
     padding-right: 10px;
   }
 
   .middle {
     margin-top: 25px;
-    width: 50%;
     padding-left: 15px;
     padding-right: 0;
     text-align: left;
   }
 
   .right {
-    display: block;
     padding-left: 0;
     padding-right: 20px;
-    text-align: center;
-    width: 50%;
   }
 
   ul {
-    padding-left: 0;
     margin-top: 20px;
     margin-bottom: 0;
     text-align: left;
   }
 
   li {
-    font-size: 12px;
+    font-size: 14px;
   }
 
   img {
@@ -318,16 +309,16 @@ a {
     height: 120px;
     margin-top: 0;
     position: relative;
-    right: -25px;
+    right: -20px;
   }
 
   .weather-description {
     font-size: 18px;
     font-weight: 400;
     position: relative;
-    text-align: right;
-    right: -3px;
-    top: -4px;
+    text-align: center;
+    right: -20px;
+    top: 2px;
   }
 
   .app-wrapper-middle {
@@ -339,7 +330,7 @@ a {
 
   .forecast-description {
     margin-top: 0;
-    margin-bottom: 30px;
+    margin-bottom: 45px;
   }
 
   .forecast-icon {
@@ -347,8 +338,101 @@ a {
   }
 
   .forecast-day {
-    font-size: 14px;
+    font-size: 18px;
     font-weight: 500;
     letter-spacing: 0.03em;
+  }
+}
+
+@media (max-width: 375px) {
+  .app-wrapper-top {
+    padding: 30px 30px 20px 30px;
+  }
+
+  .search-bar {
+    width: 95%;
+  }
+
+  .city-submit-button {
+    padding-left: 0;
+    padding-right: 5px;
+  }
+
+  .date-today {
+    margin-top: 25px;
+    font-size: 12px;
+  }
+
+  h1 {
+    font-size: 36px;
+  }
+
+  .left {
+    padding-left: 0;
+    padding-right: 0;
+  }
+
+  .middle {
+    padding-left: 15px;
+  }
+
+  .right {
+    padding-left: 15px;
+    padding-right: 15px;
+  }
+
+  ul {
+    padding-left: 0;
+  }
+
+  li {
+    font-size: 12px;
+  }
+
+  img {
+    width: 105px;
+    height: 105px;
+    margin-top: 0;
+    position: relative;
+    right: -10px;
+  }
+
+  .weather-description {
+    text-align: right;
+    right: 10px;
+    top: 10px;
+  }
+}
+
+@media (max-width: 320px) {
+  .city-submit-button {
+    padding-right: 0;
+  }
+
+  h1 {
+    font-size: 30px;
+  }
+
+  .left {
+    padding-left: 0;
+    padding-right: 0;
+  }
+
+  .middle {
+    padding-left: 0;
+  }
+
+  img {
+    width: 105px;
+    height: 105px;
+    margin-top: 0;
+    position: relative;
+    right: 10px;
+  }
+
+  .weather-description {
+    text-align: right;
+    right: -4px;
+    top: 10px;
   }
 }
